# cfsfmba

./: .gitignore  .pre-commit-config.yaml  Dockerfile  FP_SNPs_README.md  NovaSeq_report.odt  README.md  prepare_FP_SNPs.sh  prepare_GRCh38.sh  requirements.txt  run_test.sh  run_wheel.sh  runtime.debug  setup.cfg  setup.py
data/: FP_SNPs.txt  FP_SNPs_10k_GB38_twoAllelsFormat.tsv  FP_SNPs_output.tsv
scripts/: transform.py
test/: test_transform.py
test/resources/: test.tsv
test/resources/ref/: chr1.fa  chr1.fa.fai
