[metadata]
author = Elena Pustynnikova
name = cfsfmba
version = 1.0.0
description = test exercise

[options]
python_requires = >=3.7
include_package_data = True
packages:
    scripts
install_requires:
    setuptools~=53.0.0
    more_itertools
    singleton_decorator
    aenum
    typing-extensions
    markdown
    pytest
    pre-commit
    pyranges
    pysam
    argparse

[flake8]
#
# When changing codestyle checks, also check and update [tool.black] configuration in pyproject.toml
#

application-import-names = transform
exclude = .git, __pycache__
extend-ignore = E203
# see https://github.com/PyCQA/flake8-import-order
import-order-style = appnexus
max-line-length = 120

[isort]
profile=black
skip_gitignore=True
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
